Fix overloaded content. Add max-height, max-width, overflow. 280225

--- a/sources/scss/_btn.scss
+++ b/sources/scss/_btn.scss
@@ -8,6 +8,11 @@
 
   position: relative;
 
+  overflow: auto;
+  word-break: break-all;
+
+  padding: 5px;
+
   &:hover {
     text-decoration: none;
   }
