--- a/sources/scss/rooms/-card/_rooms-card.scss
+++ b/sources/scss/rooms/-card/_rooms-card.scss
@@ -168,6 +168,9 @@
 
     line-height: 24px;
 
+    max-height: 170px;
+    overflow: auto;
+
     @media (max-width: $md) {
       font-size: 0.875rem;
       line-height: 21px;
@@ -185,7 +188,7 @@
 
     width: 100%;
     max-width: 180px;
-    height: 48px;
+    max-height: 48px;
 
     &:hover {
       background-color: $color-primary-3;
